--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "author": "MundatiC",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "mssql": "^10.0.2",
     "zoo-ids": "^2.0.7"
   }
